--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -231,13 +231,13 @@
                     <p class="about-description">Consultoria especializada em segurança ofensiva com experiência comprovada em identificação e exploração de vulnerabilidades críticas.</p>
                 </div>
                 <div class="certifications-grid">
-                    <div class="cert-badge">CRTA</div>
                     <div class="cert-badge">eWPTX</div>
-                    <div class="cert-badge">DCPT</div>
-                    <div class="cert-badge">ISC2 CC</div>
                     <div class="cert-badge">eMAPT</div>
+                    <div class="cert-badge">DCPT</div>
+                    <div class="cert-badge">CRTA</div>
+                    <div class="cert-badge">ISC2 CC</div>
                 </div>
-                <p class="cert-progress">Em progresso: OSCP, PNPT, GPEN</p>
+                <p class="cert-progress">Em progresso: OSCP, BSCP, CRTP e CRTO</p>
             </div>
         </div>
     </section>
