correcao pentest infra

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="service-icon">
                         <img src="./assets/images/service-infra.jpg" alt="Infrastructure & AD" loading="lazy">
                     </div>
-                    <h3 class="service-title">Infra & Active Directory</h3>
+                    <h3 class="service-title">Pentest Infra & Active Directory</h3>
                     <p class="service-description">Testes externos e internos de infraestrutura corporativa.</p>
                     <ul class="service-list">
                         <li>External/Internal pentest</li>
