servico wifi e proxmark3

--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
                         <li>HCL AppScan Enterprise & Standard</li>
                         <li>Nessus Professional & Tenable.io</li>
                         <li>Relatórios executivos + priorização de risco</li>
-                        <li>Integração CI/CD opcional</li>
                     </ul>
                 </div>
 
@@ -199,6 +198,39 @@
                 </div>
             </div>
         </div>
+
+<!-- NOVO SERVIÇO 7 - Pentest Wi-Fi -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="/assets/images/service-wifi.jpg" alt="Pentest Wi-Fi & Wireless" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Pentest Wi-Fi & Wireless</h3>
+                    <p class="service-description">Avaliação completa de redes sem fio corporativas e industriais.</p>
+                    <ul class="service-list">
+                        <li>WPA2/WPA3 Enterprise cracking</li>
+                        <li>Evil Twin, KARMA, Rogue AP</li>
+                        <li>Ataques KRACK, Dragonblood, PMKID</li>
+                        <li>Segregação de redes IoT e guest</li>
+                        <li>Relatório executivo + recomendações 802.1X/RADIUS</li>
+                    </ul>
+                </div>
+
+ <!-- NOVO SERVIÇO 8 - Proxmark3 & Physical Access -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="/assets/images/service-proxmark.jpg" alt="Proxmark3 & Controle de Acesso Físico" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Proxmark3 & Controle de Acesso Físico</h3>
+                    <p class="service-description">Clonagem, bypass e auditoria de sistemas RFID/NFC/Mifare/HID.</p>
+                    <ul class="service-list">
+                        <li>MIFARE Classic/DESFire/Ultralight</li>
+                        <li>HID Prox, iClass, SEOS</li>
+                        <li>Leitura, clonagem e relay attacks</li>
+                        <li>Análise criptográfica de chaves</li>
+                        <li>Recomendações de migração para alta segurança</li>
+                    </ul>
+                </div>
+
     </section>
 
     <!-- Methodology Section -->
