--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                     </ul>
                 </div>
 
-                <!-- NOVO SERVIÇO 5 - Scan Automatizado -->
+<!-- Service 5 - Scan Automatizado -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <img src="./assets/images/service-scan.jpg" alt="Scan de Vulnerabilidades" loading="lazy">
+                        <img src="/assets/images/service-scan.jpg" alt="Scan de Vulnerabilidades" loading="lazy">
                     </div>
                     <h3 class="service-title">Scan Automatizado de Vulnerabilidades</h3>
                     <p class="service-description">Varredura massiva e contínua com as melhores ferramentas comerciais do mercado.</p>
@@ -184,17 +184,51 @@
                     </ul>
                 </div>
 
-                <!-- NOVO SERVIÇO 6 - Credenciais Vazadas & Dark Web -->
+                <!-- Service 6 - Credenciais Vazadas -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <img src="./assets/images/service-darkweb.jpg" alt="Monitoramento de Credenciais Vazadas" loading="lazy">
+                        <img src="/assets/images/service-darkweb.jpg" alt="Monitoramento de Credenciais Vazadas" loading="lazy">
                     </div>
                     <h3 class="service-title">Monitoramento de Credenciais & Dark Web</h3>
                     <p class="service-description">Identificação proativa de dados corporativos expostos na internet e deep/dark web.</p>
                     <ul class="service-list">
                         <li>Busca em +300 bancos de dados de vazamentos</li>
+                        <li>HaveIBeenPwned, DeHashed, Leak-Lookup, IntelX</li>
+                        <li>Alertas em tempo real de novos leaks</li>
                         <li>Relatório executivo com recomendações</li>
                         <li>Suporte a rotação de credenciais críticas</li>
+                    </ul>
+                </div>
+
+                <!-- Service 7 - Wi-Fi Pentest -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="/assets/images/service-wifi.jpg" alt="Pentest Wi-Fi & Wireless" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Pentest Wi-Fi & Wireless</h3>
+                    <p class="service-description">Avaliação completa de redes sem fio corporativas e industriais.</p>
+                    <ul class="service-list">
+                        <li>WPA2/WPA3 Enterprise cracking</li>
+                        <li>Evil Twin, KARMA, Rogue AP</li>
+                        <li>Ataques KRACK, Dragonblood, PMKID</li>
+                        <li>Segregação de redes IoT e guest</li>
+                        <li>Relatório + recomendações 802.1X/RADIUS</li>
+                    </ul>
+                </div>
+
+                <!-- Service 8 - Proxmark3 & Physical -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="/assets/images/service-proxmark.jpg" alt="Proxmark3 & Controle de Acesso Físico" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Proxmark3 & Controle de Acesso Físico</h3>
+                    <p class="service-description">Clonagem, bypass e auditoria de sistemas RFID/NFC/Mifare/HID.</p>
+                    <ul class="service-list">
+                        <li>MIFARE Classic/DESFire/Ultralight</li>
+                        <li>HID Prox, iClass, SEOS</li>
+                        <li>Leitura, clonagem e relay attacks</li>
+                        <li>Análise criptográfica de chaves</li>
+                        <li>Migração para sistemas de alta segurança</li>
                     </ul>
                 </div>
             </div>
