--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
                         <li>HCL AppScan Enterprise & Standard</li>
                         <li>Nessus Professional & Tenable.io</li>
                         <li>Relatórios executivos + priorização de risco</li>
-                        <li>Integração CI/CD opcional</li>
                     </ul>
                 </div>
 
@@ -299,7 +298,7 @@
                     <div class="cert-badge">DCPT</div>
                     <div class="cert-badge">ISC2 CC</div>
                 </div>
-                <p class="cert-progress">Em progresso: OSCP, PNPT, GPEN</p>
+                <p class="cert-progress">Em progresso: OSCP, CRTP e BSCP</p>
             </div>
         </div>
     </section>
